--- a/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
+++ b/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
@@ -6,12 +6,14 @@
    "metadata": {},
    "source": [
     "# Mini-Challenge 1\n",
+    "\n",
+    "Modul: Deep Learning  \n",
     "Thema: Hyperparameter und Model Tuning  \n",
     "Student: Si Ben Tran  \n",
     "Fachexperte: Martin Melchior  \n",
     "Abgabetermin: Ende FS23   \n",
     "\n",
-    "Zielbeschreibung:  \n",
+    "Ziel:  \n",
     "Implementiere, trainiere und validiere ein Neuronales Netzwerk Modell für einen\n",
     "Klassifikationstask mit geeignetem Dataset. Der zu modellierende Task und die dazu\n",
     "passenden Daten sollen am Anfang der Mini-Challenge individuell vereinbart werden. Dabei\n",
@@ -147,7 +149,7 @@
     "**2. Implementiere Basisfunktionalität, um Modelle zu trainieren und gegeneinander zu\n",
     "evaluieren.**\n",
     "\n",
-    "Empfehlenswert ist die Verwendung einer geeigneten MLOps Plattform (z.B. W&B)"
+    "Empfehlenswert ist die Verwendung einer geeigneten MLOps Plattform (z.B. [W&B](https://wandb.ai/site))"
    ]
   },
   {
