--- a/Deep-Dearning-With-PyTorch-Full-Course/04-PyTorch-Gradient-Descent-using-Autograd.ipynb
+++ b/Deep-Dearning-With-PyTorch-Full-Course/04-PyTorch-Gradient-Descent-using-Autograd.ipynb
@@ -244,7 +244,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "del",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -263,7 +263,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8017bdd22576c56d59d01d0ab86481dfefcf298438f79e8efb642ea91ae92990"
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
    }
   }
  },
