--- a/pytorch_quickstart_tutorial/pytorch_quickstart.ipynb
+++ b/pytorch_quickstart_tutorial/pytorch_quickstart.ipynb
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0.4%"
+      "0.1%"
      ]
     },
     {
@@ -71,7 +71,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "12.6%"
+      "14.1%"
      ]
     },
     {
@@ -92,9 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting data\\FashionMNIST\\raw\\t10k-images-idx3-ubyte.gz to data\\FashionMNIST\\raw\n",
-      "\n",
-      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz\n"
+      "Extracting data\\FashionMNIST\\raw\\t10k-images-idx3-ubyte.gz to data\\FashionMNIST\\raw\n"
      ]
     },
     {
@@ -108,6 +106,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz\n",
       "Downloading http://fashion-mnist.s3-website.eu-central-1.amazonaws.com/t10k-labels-idx1-ubyte.gz to data\\FashionMNIST\\raw\\t10k-labels-idx1-ubyte.gz\n",
       "Extracting data\\FashionMNIST\\raw\\t10k-labels-idx1-ubyte.gz to data\\FashionMNIST\\raw\n",
       "\n"
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
