--- a/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
+++ b/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
@@ -385,19 +385,55 @@
     "**1. Lege fest, wie (mit welchen Metriken) Du Modelle evaluieren möchtest.\n",
     "Berücksichtige auch den Fehler in der Schätzung dieser Metriken.**\n",
     "\n",
-    "Als Evaluierungsmetrik verwenden wir die Accuracy, da es sich um ein Klassifikationsproblem handelt.  \n",
+    "Als Evaluierungsmetrik verwenden wir die Accuracy, da es sich um ein Klassifikationsproblem handelt und die Verteilungen der Klassen ueber den ganzen Datensatz hinweg gleichmaessig verteilt sind, sowohl im Trainingsdatensatz als auch im Testdatensatz.\n",
+    "\n",
     "Wir erstellen verschiedene Modelle und Untersuchung dann das beste Modell.  \n",
     "Als Benchmark dient hier ein Multi-Layer Perceptron (MLP) mit X Hidden Layers und der Aktivierungsfunktion ReLU.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create MLP Modell\n",
+    "class MLP_1(nn.Module):\n",
+    "    'Multilayer Perceptron with 3 Layers'\n",
+    "    # defining the network architecture\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.fc1 = nn.Linear(3*32*32, 120)\n",
+    "        self.fc2 = nn.Linear(120, 84)\n",
+    "        self.fc3 = nn.Linear(84, 10)\n",
+    "        \n",
+    "    # defining the forward pass\n",
+    "    def forward(self, x):\n",
+    "        # flatten the input\n",
+    "        x = x.view(-1, 3*32*32)\n",
+    "        # pass input through the first layer\n",
+    "        x = self.fc1(x)\n",
+    "        # apply activation function\n",
+    "        x = F.relu(x)\n",
+    "        # pass input through the second layer\n",
+    "        x = self.fc2(x)\n",
+    "        # apply activation function\n",
+    "        x = F.relu(x)\n",
+    "        # pass input through the third layer\n",
+    "        x = self.fc3(x)\n",
+    "        # return output\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create first Convolutional Neural Network class\n",
-    "class CNN(nn.Module):\n",
+    "class CNN_1(nn.Module):\n",
+    "    'Connective Neural Network with 2 Convolutional Layers and 3 Fully Connected Layers'\n",
     "    # defining the network architecture\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -422,36 +458,38 @@
     "        x = F.relu(x)\n",
     "        # pass output of ReLU activation function through max pooling layer\n",
     "        x = self.pool(x)\n",
-    "\n",
     "        # pass output of max pooling layer through second convolutional layer\n",
     "        x = self.conv2(x)\n",
     "        # pass output of second convolutional layer through ReLU activation function\n",
     "        x = F.relu(x)\n",
     "        # pass output of ReLU activation function through max pooling layer\n",
     "        x = self.pool(x)\n",
-    "\n",
     "        # flatten the output of the max pooling layer\n",
     "        x = x.view(-1, 16 * 5 * 5)\n",
-    "\n",
     "        # pass flattened output through first fully connected layer\n",
     "        x = self.fc1(x)\n",
-    "\n",
     "        # pass output of first fully connected layer through ReLU activation function\n",
     "        x = F.relu(x)\n",
-    "\n",
     "        # pass output of ReLU activation function through second fully connected layer\n",
     "        x = self.fc2(x)\n",
-    "\n",
     "        # pass output of second fully connected layer through ReLU activation function\n",
     "        x = F.relu(x)\n",
-    "\n",
     "        # pass output of ReLU activation function through third fully connected layer\n",
     "        x = self.fc3(x)\n",
-    "\n",
     "        # return output of third fully connected layer\n",
-    "        return x\n",
-    "    \n",
-    "model = CNN()"
+    "        return x\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating models\n",
+    "model = CNN_1()\n",
+    "model_mlp_3 = MLP_1()\n",
+    "model_CNN_2_3 = CNN_1()\n"
    ]
   },
   {
