--- a/del-Minichallenge-1/del-testmodels.ipynb
+++ b/del-Minichallenge-1/del-testmodels.ipynb
@@ -2,42 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch cuda is available: False\n",
-      "Using device: cpu\n",
-      "No GPU available, using the CPU instead.\n",
-      "CNN with 5 Convolutional Layers and 3 Fully Connected Layers\n",
+      "torch cuda is available: True\n",
+      "Using device: cuda\n",
+      "NVIDIA GeForce GTX 980\n",
+      "Memory Usage:\n",
+      "Allocated: 0.0 GB\n",
+      "Cached:    0.0 GB\n",
+      "CNN with 3 Convolutional Layers and 3 Fully Connected Layers\n",
       "----------------------------------------------------------------\n",
       "        Layer (type)               Output Shape         Param #\n",
       "================================================================\n",
-      "            Conv2d-1          [-1, 381, 34, 34]          28,956\n",
-      "         MaxPool2d-2          [-1, 381, 17, 17]               0\n",
-      "            Conv2d-3          [-1, 381, 19, 19]       3,629,406\n",
-      "         MaxPool2d-4            [-1, 381, 9, 9]               0\n",
-      "            Conv2d-5          [-1, 381, 11, 11]       3,629,406\n",
-      "         MaxPool2d-6            [-1, 381, 5, 5]               0\n",
-      "            Conv2d-7            [-1, 381, 7, 7]       3,629,406\n",
-      "         MaxPool2d-8            [-1, 381, 3, 3]               0\n",
-      "            Conv2d-9            [-1, 381, 5, 5]       3,629,406\n",
-      "        MaxPool2d-10            [-1, 381, 2, 2]               0\n",
-      "           Linear-11                  [-1, 410]         625,250\n",
-      "           Linear-12                  [-1, 100]          41,100\n",
-      "           Linear-13                   [-1, 10]           1,010\n",
+      "            Conv2d-1          [-1, 102, 34, 34]           7,752\n",
+      "         MaxPool2d-2          [-1, 102, 17, 17]               0\n",
+      "            Conv2d-3          [-1, 102, 19, 19]         260,202\n",
+      "         MaxPool2d-4            [-1, 102, 9, 9]               0\n",
+      "            Conv2d-5          [-1, 102, 11, 11]         260,202\n",
+      "         MaxPool2d-6            [-1, 102, 5, 5]               0\n",
+      "            Linear-7                  [-1, 120]         306,120\n",
+      "            Linear-8                  [-1, 200]          24,200\n",
+      "            Linear-9                   [-1, 10]           2,010\n",
       "================================================================\n",
-      "Total params: 15,213,940\n",
-      "Trainable params: 15,213,940\n",
+      "Total params: 860,486\n",
+      "Trainable params: 860,486\n",
       "Non-trainable params: 0\n",
       "----------------------------------------------------------------\n",
       "Input size (MB): 0.01\n",
-      "Forward/backward pass size (MB): 6.17\n",
-      "Params size (MB): 58.04\n",
-      "Estimated Total Size (MB): 64.21\n",
+      "Forward/backward pass size (MB): 1.58\n",
+      "Params size (MB): 3.28\n",
+      "Estimated Total Size (MB): 4.88\n",
       "----------------------------------------------------------------\n"
      ]
     }
@@ -76,71 +75,62 @@
     "\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
+    "#    def __init__(self, activation=F.relu, kernel_size=5, pool_size=2, padding=3, conv1_channels = 10, conv2_channels=8, conv3_channels=8, fc_hidden_1=120, fc_hidden_2=84, drop_out=0):\n",
     "\n",
-    "class CNN_3_6(nn.Module):\n",
-    "    def __init__(self, out_in_shape=256, kernel_size=5, padding=3, fc_nodes1=120, fc_nodes2=84):\n",
+    "class CNN_4(nn.Module):\n",
+    "    '''\n",
+    "    Convolutional Neural Network with 3 Convolutional Layers and 3 Fully Connected Layers\n",
+    "    '''\n",
+    "    def __init__(self, in_out_channel=64, kernel_size = 5, pool_size = 2, padding = 3, fc_nodes1 = 120, fc_nodes2 = 84):\n",
     "        super().__init__()\n",
-    "        # self outout_in_shape\n",
-    "        self.out_in_shape = out_in_shape\n",
+    "        # define in_out_channel\n",
+    "        self.in_out_channel = in_out_channel\n",
     "        # first convolutional layer\n",
-    "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=out_in_shape, kernel_size=kernel_size, padding=3)\n",
+    "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=in_out_channel, kernel_size=kernel_size, padding=padding)\n",
     "        # max pooling layer\n",
-    "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2) # 2x2 max pooling\n",
+    "        self.pool = nn.MaxPool2d(kernel_size=pool_size, stride=pool_size) # 2x2 max pooling\n",
     "        # second convolutional layer\n",
-    "        self.conv2 = nn.Conv2d(in_channels=out_in_shape, out_channels=out_in_shape, kernel_size=kernel_size, padding=padding)\n",
+    "        self.conv2 = nn.Conv2d(in_channels=in_out_channel, out_channels=in_out_channel, kernel_size=kernel_size, padding=padding)\n",
     "        # third convolutional layer\n",
-    "        self.conv3 = nn.Conv2d(in_channels=out_in_shape, out_channels=out_in_shape, kernel_size=kernel_size, padding=padding)\n",
-    "        # fourth convolutional layer\n",
-    "        self.conv4 = nn.Conv2d(in_channels=out_in_shape, out_channels=out_in_shape, kernel_size=kernel_size, padding=padding)\n",
-    "        # add fifth convolutional layer\n",
-    "        self.conv5 = nn.Conv2d(in_channels=out_in_shape, out_channels=out_in_shape, kernel_size=kernel_size, padding=padding)\n",
+    "        self.conv3 = nn.Conv2d(in_channels=in_out_channel, out_channels=in_out_channel, kernel_size=kernel_size, padding=padding)\n",
     "        # first fully connected layer\n",
-    "        self.fc1 = nn.Linear(in_features=out_in_shape*2*2, out_features=fc_nodes1)\n",
+    "        self.fc1 = nn.Linear(in_features=in_out_channel*5*5, out_features=fc_nodes1)\n",
     "        # second fully connected layer\n",
     "        self.fc2 = nn.Linear(in_features=fc_nodes1, out_features=fc_nodes2)\n",
     "        # third fully connected layer\n",
     "        self.fc3 = nn.Linear(in_features=fc_nodes2, out_features=10)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # first convolutional layer\n",
+    "        ## first convolutional layer\n",
     "        x = self.conv1(x)\n",
     "        x = F.relu(x)\n",
     "        x = self.pool(x)\n",
-    "        # second convolutional layer\n",
+    "        ## second convolutional layer\n",
     "        x = self.conv2(x)\n",
     "        x = F.relu(x)\n",
     "        x = self.pool(x)\n",
-    "        # third convolutional layer\n",
+    "        ## third convolutional layer\n",
     "        x = self.conv3(x)\n",
     "        x = F.relu(x)\n",
     "        x = self.pool(x)\n",
-    "        # fourth convolutional layer\n",
-    "        x = self.conv4(x)\n",
-    "        x = F.relu(x)\n",
-    "        x = self.pool(x)\n",
-    "        # add fifth convolutional layer\n",
-    "        x = self.conv5(x)\n",
-    "        x = F.relu(x)\n",
-    "        x = self.pool(x)\n",
-    "        # flatten the output of the convolutional layers\n",
-    "        x = x.view(-1, self.out_in_shape*2*2)\n",
-    "        # first fully connected layer\n",
+    "        ## flatten\n",
+    "        x = x.view(-1, self.in_out_channel*5*5)\n",
+    "        ## first fully connected layer\n",
     "        x = self.fc1(x)\n",
     "        x = F.relu(x)\n",
-    "        # second fully connected layer\n",
+    "        ## second fully connected layer\n",
     "        x = self.fc2(x)\n",
     "        x = F.relu(x)\n",
-    "        # third fully connected layer\n",
+    "        ## third fully connected layer\n",
     "        x = self.fc3(x)\n",
     "        return x\n",
     "    \n",
-    "\n",
     "# creating model objects and get the number of parameters\n",
-    "model_cnn_3_6 = CNN_3_6(out_in_shape=381, kernel_size=5, padding=3, fc_nodes1=410, fc_nodes2=100).to(device)\n",
+    "model_cnn_4 = CNN_4(in_out_channel=102, kernel_size=5, pool_size=2, padding=3, fc_nodes1=120, fc_nodes2=200).to(device)\n",
     "\n",
     "# print the model architecture\n",
-    "print(\"CNN with 5 Convolutional Layers and 3 Fully Connected Layers\")\n",
-    "summary(model_cnn_3_6, (3, 32, 32))"
+    "print(\"CNN with 3 Convolutional Layers and 3 Fully Connected Layers\")\n",
+    "summary(model_cnn_4, (3, 32, 32))"
    ]
   }
  ],
