--- a/del-Minichallenge-1/del-testmodels.ipynb
+++ b/del-Minichallenge-1/del-testmodels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -127,6 +127,90 @@
     "    \n",
     "# creating model objects and get the number of parameters\n",
     "model_cnn_4 = CNN_4(in_out_channel=102, kernel_size=5, pool_size=2, padding=3, fc_nodes1=120, fc_nodes2=200).to(device)\n",
+    "\n",
+    "# print the model architecture\n",
+    "print(\"CNN with 3 Convolutional Layers and 3 Fully Connected Layers\")\n",
+    "summary(model_cnn_4, (3, 32, 32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CNN with 3 Convolutional Layers and 3 Fully Connected Layers\n",
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 32, 28, 28]           2,432\n",
+      "         MaxPool2d-2           [-1, 32, 14, 14]               0\n",
+      "            Conv2d-3           [-1, 32, 10, 10]          25,632\n",
+      "         MaxPool2d-4             [-1, 32, 5, 5]               0\n",
+      "            Linear-5                  [-1, 100]          80,100\n",
+      "            Linear-6                   [-1, 80]           8,080\n",
+      "            Linear-7                   [-1, 10]             810\n",
+      "================================================================\n",
+      "Total params: 117,054\n",
+      "Trainable params: 117,054\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.01\n",
+      "Forward/backward pass size (MB): 0.27\n",
+      "Params size (MB): 0.45\n",
+      "Estimated Total Size (MB): 0.73\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "class CNN_4_small(nn.Module):\n",
+    "    '''\n",
+    "    Convolutional Neural Network with 3 Convolutional Layers and 3 Fully Connected Layers\n",
+    "    '''\n",
+    "    def __init__(self, in_out_channel=32, kernel_size = 5, pool_size = 2, fc_nodes1 = 120, fc_nodes2 = 84):\n",
+    "        super().__init__()\n",
+    "        # define in_out_channel\n",
+    "        self.in_out_channel = in_out_channel\n",
+    "        # first convolutional layer\n",
+    "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=in_out_channel, kernel_size=kernel_size)\n",
+    "        # max pooling layer\n",
+    "        self.pool = nn.MaxPool2d(kernel_size=pool_size, stride=pool_size) # 2x2 max pooling\n",
+    "        # second convolutional layer\n",
+    "        self.conv2 = nn.Conv2d(in_channels=in_out_channel, out_channels=in_out_channel, kernel_size=kernel_size)\n",
+    "        # first fully connected layer\n",
+    "        self.fc1 = nn.Linear(in_features=in_out_channel*5*5, out_features=fc_nodes1)\n",
+    "        # second fully connected layer\n",
+    "        self.fc2 = nn.Linear(in_features=fc_nodes1, out_features=fc_nodes2)\n",
+    "        # third fully connected layer\n",
+    "        self.fc3 = nn.Linear(in_features=fc_nodes2, out_features=10)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        ## first convolutional layer\n",
+    "        x = self.conv1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        ## second convolutional layer\n",
+    "        x = self.conv2(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        ## flatten\n",
+    "        x = x.view(-1, self.in_out_channel*5*5)\n",
+    "        ## first fully connected layer\n",
+    "        x = self.fc1(x)\n",
+    "        x = F.relu(x)\n",
+    "        ## second fully connected layer\n",
+    "        x = self.fc2(x)\n",
+    "        x = F.relu(x)\n",
+    "        ## third fully connected layer\n",
+    "        x = self.fc3(x)\n",
+    "        return x\n",
+    "    \n",
+    "# creating model objects and get the number of parameters\n",
+    "model_cnn_4 = CNN_4(in_out_channel=32, kernel_size=5, pool_size=2, fc_nodes1=100, fc_nodes2=80).to(device)\n",
     "\n",
     "# print the model architecture\n",
     "print(\"CNN with 3 Convolutional Layers and 3 Fully Connected Layers\")\n",
