--- a/del-Minichallenge-1/del-testmodels.ipynb
+++ b/del-Minichallenge-1/del-testmodels.ipynb
@@ -2,42 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch cuda is available: True\n",
-      "Using device: cuda\n",
-      "NVIDIA GeForce GTX 980\n",
-      "Memory Usage:\n",
-      "Allocated: 0.0 GB\n",
-      "Cached:    0.0 GB\n",
-      "CNN with 3 Convolutional Layers and 3 Fully Connected Layers\n",
-      "----------------------------------------------------------------\n",
-      "        Layer (type)               Output Shape         Param #\n",
-      "================================================================\n",
-      "            Conv2d-1          [-1, 102, 34, 34]           7,752\n",
-      "         MaxPool2d-2          [-1, 102, 17, 17]               0\n",
-      "            Conv2d-3          [-1, 102, 19, 19]         260,202\n",
-      "         MaxPool2d-4            [-1, 102, 9, 9]               0\n",
-      "            Conv2d-5          [-1, 102, 11, 11]         260,202\n",
-      "         MaxPool2d-6            [-1, 102, 5, 5]               0\n",
-      "            Linear-7                  [-1, 120]         306,120\n",
-      "            Linear-8                  [-1, 200]          24,200\n",
-      "            Linear-9                   [-1, 10]           2,010\n",
-      "================================================================\n",
-      "Total params: 860,486\n",
-      "Trainable params: 860,486\n",
-      "Non-trainable params: 0\n",
-      "----------------------------------------------------------------\n",
-      "Input size (MB): 0.01\n",
-      "Forward/backward pass size (MB): 1.58\n",
-      "Params size (MB): 3.28\n",
-      "Estimated Total Size (MB): 4.88\n",
-      "----------------------------------------------------------------\n"
+      "torch cuda is available: False\n",
+      "Using device: cpu\n",
+      "No GPU available, using the CPU instead.\n"
      ]
     }
    ],
@@ -74,14 +48,50 @@
     "\n",
     "\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "#    def __init__(self, activation=F.relu, kernel_size=5, pool_size=2, padding=3, conv1_channels = 10, conv2_channels=8, conv3_channels=8, fc_hidden_1=120, fc_hidden_2=84, drop_out=0):\n",
-    "\n",
+    "import torch.nn.functional as F\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CNN with 3 Convolutional Layers and 3 Fully Connected Layers\n",
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 30, 34, 34]           2,280\n",
+      "         MaxPool2d-2           [-1, 30, 17, 17]               0\n",
+      "            Conv2d-3           [-1, 30, 19, 19]          22,530\n",
+      "         MaxPool2d-4             [-1, 30, 9, 9]               0\n",
+      "            Conv2d-5           [-1, 30, 11, 11]          22,530\n",
+      "         MaxPool2d-6             [-1, 30, 5, 5]               0\n",
+      "            Linear-7                   [-1, 84]          63,084\n",
+      "            Linear-8                   [-1, 30]           2,550\n",
+      "            Linear-9                   [-1, 10]             310\n",
+      "================================================================\n",
+      "Total params: 113,284\n",
+      "Trainable params: 113,284\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.01\n",
+      "Forward/backward pass size (MB): 0.47\n",
+      "Params size (MB): 0.43\n",
+      "Estimated Total Size (MB): 0.91\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
     "class CNN_4(nn.Module):\n",
     "    '''\n",
     "    Convolutional Neural Network with 3 Convolutional Layers and 3 Fully Connected Layers\n",
     "    '''\n",
-    "    def __init__(self, in_out_channel=64, kernel_size = 5, pool_size = 2, padding = 3, fc_nodes1 = 120, fc_nodes2 = 84):\n",
+    "    def __init__(self, in_out_channel=32, kernel_size = 5, pool_size = 2, padding = 3, fc_nodes1 = 120, fc_nodes2 = 84):\n",
     "        super().__init__()\n",
     "        # define in_out_channel\n",
     "        self.in_out_channel = in_out_channel\n",
@@ -126,7 +136,7 @@
     "        return x\n",
     "    \n",
     "# creating model objects and get the number of parameters\n",
-    "model_cnn_4 = CNN_4(in_out_channel=102, kernel_size=5, pool_size=2, padding=3, fc_nodes1=120, fc_nodes2=200).to(device)\n",
+    "model_cnn_4 = CNN_4(in_out_channel=30, kernel_size=5, pool_size=2, padding=3, fc_nodes1=84, fc_nodes2=30).to(device)\n",
     "\n",
     "# print the model architecture\n",
     "print(\"CNN with 3 Convolutional Layers and 3 Fully Connected Layers\")\n",
@@ -135,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -146,28 +156,30 @@
       "----------------------------------------------------------------\n",
       "        Layer (type)               Output Shape         Param #\n",
       "================================================================\n",
-      "            Conv2d-1           [-1, 32, 28, 28]           2,432\n",
-      "         MaxPool2d-2           [-1, 32, 14, 14]               0\n",
-      "            Conv2d-3           [-1, 32, 10, 10]          25,632\n",
-      "         MaxPool2d-4             [-1, 32, 5, 5]               0\n",
-      "            Linear-5                  [-1, 100]          80,100\n",
-      "            Linear-6                   [-1, 80]           8,080\n",
-      "            Linear-7                   [-1, 10]             810\n",
+      "            Conv2d-1           [-1, 32, 34, 34]           2,432\n",
+      "         MaxPool2d-2           [-1, 32, 17, 17]               0\n",
+      "            Conv2d-3           [-1, 32, 19, 19]          25,632\n",
+      "         MaxPool2d-4             [-1, 32, 9, 9]               0\n",
+      "            Conv2d-5           [-1, 32, 11, 11]          25,632\n",
+      "         MaxPool2d-6             [-1, 32, 5, 5]               0\n",
+      "            Linear-7                   [-1, 80]          64,080\n",
+      "            Linear-8                   [-1, 30]           2,430\n",
+      "            Linear-9                   [-1, 10]             310\n",
       "================================================================\n",
-      "Total params: 117,054\n",
-      "Trainable params: 117,054\n",
+      "Total params: 120,516\n",
+      "Trainable params: 120,516\n",
       "Non-trainable params: 0\n",
       "----------------------------------------------------------------\n",
       "Input size (MB): 0.01\n",
-      "Forward/backward pass size (MB): 0.27\n",
-      "Params size (MB): 0.45\n",
-      "Estimated Total Size (MB): 0.73\n",
+      "Forward/backward pass size (MB): 0.50\n",
+      "Params size (MB): 0.46\n",
+      "Estimated Total Size (MB): 0.97\n",
       "----------------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "class CNN_4_small(nn.Module):\n",
+    "class CNN_5(nn.Module):\n",
     "    '''\n",
     "    Convolutional Neural Network with 3 Convolutional Layers and 3 Fully Connected Layers\n",
     "    '''\n",
@@ -210,7 +222,7 @@
     "        return x\n",
     "    \n",
     "# creating model objects and get the number of parameters\n",
-    "model_cnn_4 = CNN_4(in_out_channel=32, kernel_size=5, pool_size=2, fc_nodes1=100, fc_nodes2=80).to(device)\n",
+    "model_cnn_4 = CNN_4(in_out_channel=32, kernel_size=5, pool_size=2, fc_nodes1=80, fc_nodes2=30).to(device)\n",
     "\n",
     "# print the model architecture\n",
     "print(\"CNN with 3 Convolutional Layers and 3 Fully Connected Layers\")\n",
