correct parameter padding in cnn5

--- a/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
+++ b/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
@@ -2143,9 +2143,6 @@
     "        'kernel_size': {\n",
     "            'values': [5]\n",
     "        },\n",
-    "        'padding': {\n",
-    "            'values': [3]\n",
-    "        },\n",
     "        'pool_size': {\n",
     "            'values': [2]\n",
     "        },\n",
@@ -2181,7 +2178,7 @@
     "    fc_nodes2 = wandb.config.fc_nodes2\n",
     "\n",
     "    if models == \"CNN_5\":\n",
-    "        model = CNN_5(in_out_channel=in_out_channel, kernel_size=kernel_size, pool_size=pool_size, padding=padding, fc_nodes1=fc_nodes1, fc_nodes2=fc_nodes2).to(device)\n",
+    "        model = CNN_5(in_out_channel=in_out_channel, kernel_size=kernel_size, pool_size=pool_size, fc_nodes1=fc_nodes1, fc_nodes2=fc_nodes2).to(device)\n",
     "    \n",
     "    # get dataloader\n",
     "    trainloader, valloader = get_dataloader(batch_size=batch_size)\n",
