--- a/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
+++ b/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
@@ -2729,10 +2729,10 @@
     "            'values': [64]\n",
     "        },\n",
     "        'num_epochs': {\n",
-    "            'values': [20]\n",
+    "            'values': [30]\n",
     "        },\n",
     "        'model': {\n",
-    "            'values': ['CNN_5_bn']\n",
+    "            'values': ['CNN_5', 'CNN_5_bn']\n",
     "        },\n",
     "        'in_out_channel': {\n",
     "            'values': [43]\n",
@@ -2773,6 +2773,8 @@
     "\n",
     "    if models == \"CNN_5_bn\":\n",
     "        model = CNN_5_bn(in_out_channel=in_out_channel, kernel_size=kernel_size, pool_size=pool_size, fc_nodes1=fc_nodes1, fc_nodes2=fc_nodes2).to(device)\n",
+    "    else:\n",
+    "        model = CNN_5(in_out_channel=in_out_channel, kernel_size=kernel_size, pool_size=pool_size, fc_nodes1=fc_nodes1, fc_nodes2=fc_nodes2).to(device)\n",
     "    \n",
     "    # get dataloader\n",
     "    trainloader, valloader = get_dataloader(batch_size=batch_size)\n",
