--- a/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
+++ b/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
@@ -2836,103 +2836,7 @@
     "            'values': [20]\n",
     "        },\n",
     "        'model': {\n",
-    "            'values': ['CNN_5']\n",
-    "        },\n",
-    "        'in_out_channel': {\n",
-    "            'values': [43]\n",
-    "        },\n",
-    "        'kernel_size': {\n",
-    "            'values': [5]\n",
-    "        },\n",
-    "        'pool_size': {\n",
-    "            'values': [2]\n",
-    "        },\n",
-    "        'fc_nodes1': {\n",
-    "            'values': [95]\n",
-    "        },\n",
-    "        'fc_nodes2': {\n",
-    "            'values': [54]\n",
-    "        },\n",
-    "        'optimizers': {\n",
-    "            'values': ['Adam', 'SGD']\n",
-    "        }\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "# create a sweep\n",
-    "sweep_id = wandb.sweep(sweep_config, project=\"del-mc1\")\n",
-    "\n",
-    "# define the train function for wandb\n",
-    "def wandb_train():\n",
-    "    # initialize a new wandb run\n",
-    "    wandb.init()\n",
-    "\n",
-    "    # get the hyperparameters from wandb\n",
-    "    lr = wandb.config.lr\n",
-    "    batch_size = wandb.config.batch_size\n",
-    "    num_epochs = wandb.config.num_epochs\n",
-    "    models = wandb.config.model\n",
-    "    in_out_channel = wandb.config.in_out_channel\n",
-    "    kernel_size = wandb.config.kernel_size\n",
-    "    pool_size = wandb.config.pool_size\n",
-    "    fc_nodes1 = wandb.config.fc_nodes1\n",
-    "    fc_nodes2 = wandb.config.fc_nodes2\n",
-    "    optimizers = wandb.config.optimizers\n",
-    "\n",
-    "    if models == \"CNN_5\":\n",
-    "        model = CNN_5(in_out_channel=in_out_channel, kernel_size=kernel_size, pool_size=pool_size, fc_nodes1=fc_nodes1, fc_nodes2=fc_nodes2).to(device)\n",
-    "    \n",
-    "    # get dataloader\n",
-    "    trainloader, valloader = get_dataloader(batch_size=batch_size)\n",
-    "\n",
-    "    # create optimizer\n",
-    "    if optimizers == \"SGD\":\n",
-    "        optimizer = optim.SGD(model.parameters(), lr = lr)\n",
-    "    else:\n",
-    "        optimizer = optim.Adam(model.parameters(), lr = lr)\n",
-    "        \n",
-    "    # create criterion\n",
-    "    criterion_crossentropy = nn.CrossEntropyLoss()\n",
-    "\n",
-    "    for epoch in range(num_epochs):\n",
-    "        # train model\n",
-    "        train_loss, train_acc = train_modell(model, trainloader, criterion=criterion_crossentropy, optimizer=optimizer)\n",
-    "        # test model\n",
-    "        val_loss, val_acc = test_model(model, valloader, criterion=criterion_crossentropy)\n",
-    "\n",
-    "        # log metrics to wandb\n",
-    "        wandb.log({\"Train Loss\": train_loss, \"Train Accuracy\": train_acc, \"Validation Loss\": val_loss, \"Validation Accuracy\": val_acc, \"epoch\": epoch + 1})\n",
-    "\n",
-    "# run the sweep\n",
-    "wandb.agent(sweep_id, function=wandb_train, count = 25)\n",
-    "wandb.finish()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define sweep configuration (Nutzen von Adam ohne BN und mit Regularisierung)\n",
-    "sweep_config = {\n",
-    "    'method': 'bayes', \n",
-    "    'metric': {\n",
-    "        'name': 'Validation Accuracy',\n",
-    "        'goal': 'maximize'\n",
-    "    },\n",
-    "    'parameters': {\n",
-    "        'lr': {\n",
-    "            'values': [0.01707]\n",
-    "        },\n",
-    "        'batch_size': {\n",
-    "            'values': [64]\n",
-    "        },\n",
-    "        'num_epochs': {\n",
-    "            'values': [20]\n",
-    "        },\n",
-    "        'model': {\n",
-    "            'values': ['CNN_5_dropout']\n",
+    "            'values': ['CNN_5', 'CNN_5_dropout']\n",
     "        },\n",
     "        'in_out_channel': {\n",
     "            'values': [43]\n",
@@ -2950,8 +2854,7 @@
     "            'values': [54]\n",
     "        },\n",
     "        'l2_reg': {\n",
-    "            'min': 0.00001,\n",
-    "            'max': 0.01,\n",
+    "            'values': [0.00001, 0.0001, 0.001, 0.01, 0.1]\n",
     "        },\n",
     "        'dropout1': {\n",
     "            'min': 0.1,\n",
@@ -2985,12 +2888,14 @@
     "    pool_size = wandb.config.pool_size\n",
     "    fc_nodes1 = wandb.config.fc_nodes1\n",
     "    fc_nodes2 = wandb.config.fc_nodes2\n",
+    "    droprate1 = wandb.config.dropout1\n",
+    "    droprate2 = wandb.config.dropout2\n",
     "    l2_reg = wandb.config.l2_reg\n",
-    "    droprate1=wandb.config.dropout1\n",
-    "    droprate2=wandb.config.dropout2\n",
     "    optimizers = wandb.config.optimizers\n",
     "\n",
-    "    if models == \"CNN_5_dropout\":\n",
+    "    if models == \"CNN_5\":\n",
+    "        model = CNN_5(in_out_channel=in_out_channel, kernel_size=kernel_size, pool_size=pool_size, fc_nodes1=fc_nodes1, fc_nodes2=fc_nodes2).to(device)\n",
+    "    else:\n",
     "        model = CNN_5_dropout(in_out_channel=in_out_channel, kernel_size=kernel_size, pool_size=pool_size, fc_nodes1=fc_nodes1, fc_nodes2=fc_nodes2, droprate1=droprate1, droprate2=droprate2).to(device)\n",
     "    \n",
     "    # get dataloader\n",
@@ -3001,7 +2906,7 @@
     "        optimizer = optim.SGD(model.parameters(), lr = lr, weight_decay=l2_reg)\n",
     "    else:\n",
     "        optimizer = optim.Adam(model.parameters(), lr = lr, weight_decay=l2_reg)\n",
-    "\n",
+    "        \n",
     "    # create criterion\n",
     "    criterion_crossentropy = nn.CrossEntropyLoss()\n",
     "\n",
