--- a/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
+++ b/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
@@ -2600,6 +2600,8 @@
    "source": [
     "### 3. Nutzen von Batchnorm BN (ohne REG, mit SGD)\n",
     "\n",
+    "Sweep Name startet mit: A4-3-runX\n",
+    "\n",
     "Evaluiere, ob Batchnorm etwas bringt. Beschreibe kurz, was die Idee von BN ist,\n",
     "wozu es helfen soll.\n",
     "\n",
@@ -2716,7 +2718,7 @@
    "source": [
     "# define sweep configuration\n",
     "sweep_config = {\n",
-    "    'method': 'bayes', \n",
+    "    'method': 'grid', \n",
     "    'metric': {\n",
     "        'name': 'Validation Accuracy',\n",
     "        'goal': 'maximize'\n",
@@ -2807,6 +2809,8 @@
     "\n",
     "### 4. Nutzen von Adam (ohne BN, ohne / mit REG)\n",
     "\n",
+    "Sweep Name startet mit: A4-4-runX\n",
+    "\n",
     "Evaluiere, ob Du mit Adam bessere Resultate erzielen kannst.\n",
     "\n",
     "Hier ersetzen wir en SGD Optimizer mittels Adam und nutzen dabei unser Modelle mittel l2 Regularisierung und Dropout"
@@ -2820,7 +2824,7 @@
    "source": [
     "# define sweep configuration (Nutzen von ADAM ohne BN und ohne Regularisierung)\n",
     "sweep_config = {\n",
-    "    'method': 'bayes', \n",
+    "    'method': 'grid', \n",
     "    'metric': {\n",
     "        'name': 'Validation Accuracy',\n",
     "        'goal': 'maximize'\n",
