--- a/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
+++ b/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
@@ -2731,7 +2731,7 @@
     "            'values': [64]\n",
     "        },\n",
     "        'num_epochs': {\n",
-    "            'values': [30]\n",
+    "            'values': [250]\n",
     "        },\n",
     "        'model': {\n",
     "            'values': ['CNN_5', 'CNN_5_bn']\n",
@@ -2796,7 +2796,7 @@
     "        wandb.log({\"Train Loss\": train_loss, \"Train Accuracy\": train_acc, \"Validation Loss\": val_loss, \"Validation Accuracy\": val_acc, \"epoch\": epoch + 1})\n",
     "\n",
     "# run the sweep\n",
-    "wandb.agent(sweep_id, function=wandb_train, count = 25)\n",
+    "wandb.agent(sweep_id, function=wandb_train)\n",
     "wandb.finish()"
    ]
   },
@@ -2824,14 +2824,15 @@
    "source": [
     "# define sweep configuration (Nutzen von ADAM ohne BN und ohne Regularisierung)\n",
     "sweep_config = {\n",
-    "    'method': 'grid', \n",
+    "    'method': 'random', \n",
     "    'metric': {\n",
     "        'name': 'Validation Accuracy',\n",
     "        'goal': 'maximize'\n",
     "    },\n",
     "    'parameters': {\n",
     "        'lr': {\n",
-    "            'values': [0.01707]\n",
+    "            'min': 0.0001,\n",
+    "            'max': 0.1\n",
     "        },\n",
     "        'batch_size': {\n",
     "            'values': [64]\n",
@@ -2858,7 +2859,8 @@
     "            'values': [54]\n",
     "        },\n",
     "        'l2_reg': {\n",
-    "            'values': [0.00001, 0.0001, 0.001, 0.01, 0.1]\n",
+    "            'min': 0.00001,\n",
+    "            'max': 0.1,\n",
     "        },\n",
     "        'dropout1': {\n",
     "            'min': 0.1,\n",
