add weight init stuff

--- a/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
+++ b/del-Minichallenge-1/del-Minichallenge-1-SiBenTran.ipynb
@@ -1586,6 +1586,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Erkentniss - Training mit unterschiedlichen Modellen\n",
+    "\n",
+    "[Sweep](https://wandb.ai/7ben18/del-mc1/sweeps/r6z8iruc?workspace=user-7ben18)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### 4b Bemerkung:\n",
     "\n",
     "Cuda out of Memory Fehlermehldung. \n",
@@ -1595,174 +1605,6 @@
     "Evtl auf CSCS umsteigen!\n",
     "\n",
     "Wir fahren weiter fort mit einem kleineren CNN Modell, welches nur 3 Convulutional Layers sowie 3 Fully Connected Layers hat."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Allocated:', round(torch.cuda.memory_allocated(0)/1024**3,1), 'GB')\n",
-    "print('Cached:   ', round(torch.cuda.memory_reserved(0)/1024**3,1), 'GB')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CNN_4(nn.Module):\n",
-    "    '''\n",
-    "    Convolutional Neural Network with 3 Convolutional Layers and 3 Fully Connected Layers\n",
-    "    '''\n",
-    "    def __init__(self, in_out_channel=64, kernel_size = 5, pool_size = 2, padding = 3, fc_nodes1 = 120, fc_nodes2 = 84):\n",
-    "        super().__init__()\n",
-    "        # define in_out_channel\n",
-    "        self.in_out_channel = in_out_channel\n",
-    "        # first convolutional layer\n",
-    "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=in_out_channel, kernel_size=kernel_size, padding=padding)\n",
-    "        # max pooling layer\n",
-    "        self.pool = nn.MaxPool2d(kernel_size=pool_size, stride=pool_size) # 2x2 max pooling\n",
-    "        # second convolutional layer\n",
-    "        self.conv2 = nn.Conv2d(in_channels=in_out_channel, out_channels=in_out_channel, kernel_size=kernel_size, padding=padding)\n",
-    "        # third convolutional layer\n",
-    "        self.conv3 = nn.Conv2d(in_channels=in_out_channel, out_channels=in_out_channel, kernel_size=kernel_size, padding=padding)\n",
-    "        # first fully connected layer\n",
-    "        self.fc1 = nn.Linear(in_features=in_out_channel*5*5, out_features=fc_nodes1)\n",
-    "        # second fully connected layer\n",
-    "        self.fc2 = nn.Linear(in_features=fc_nodes1, out_features=fc_nodes2)\n",
-    "        # third fully connected layer\n",
-    "        self.fc3 = nn.Linear(in_features=fc_nodes2, out_features=10)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        ## first convolutional layer\n",
-    "        x = self.conv1(x)\n",
-    "        x = F.relu(x)\n",
-    "        x = self.pool(x)\n",
-    "        ## second convolutional layer\n",
-    "        x = self.conv2(x)\n",
-    "        x = F.relu(x)\n",
-    "        x = self.pool(x)\n",
-    "        ## third convolutional layer\n",
-    "        x = self.conv3(x)\n",
-    "        x = F.relu(x)\n",
-    "        x = self.pool(x)\n",
-    "        ## flatten\n",
-    "        x = x.view(-1, self.in_out_channel*5*5)\n",
-    "        ## first fully connected layer\n",
-    "        x = self.fc1(x)\n",
-    "        x = F.relu(x)\n",
-    "        ## second fully connected layer\n",
-    "        x = self.fc2(x)\n",
-    "        x = F.relu(x)\n",
-    "        ## third fully connected layer\n",
-    "        x = self.fc3(x)\n",
-    "        return x\n",
-    "    \n",
-    "# creating model objects and get the number of parameters\n",
-    "model_cnn_4 = CNN_4(in_out_channel=128, kernel_size=5, pool_size=2, padding=3, fc_nodes1=120, fc_nodes2=84).to(device)\n",
-    "\n",
-    "# print the model architecture\n",
-    "print(\"CNN with 3 Convolutional Layers and 3 Fully Connected Layers\")\n",
-    "summary(model_cnn_4, (3, 32, 32))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define sweep configuration for CNN_4\n",
-    "sweep_config = {\n",
-    "    'method': 'bayes', \n",
-    "    'metric': {\n",
-    "        'name': 'Validation Accuracy',\n",
-    "        'goal': 'maximize'\n",
-    "    },\n",
-    "    'parameters': {\n",
-    "        'lr': {\n",
-    "            'min': 0.01,\n",
-    "            'max': 0.1,\n",
-    "        },\n",
-    "        'batch_size': {\n",
-    "            'values': [4, 8, 16]\n",
-    "        },\n",
-    "        'num_epochs': {\n",
-    "            'values': [20]\n",
-    "        },\n",
-    "        'model': {\n",
-    "            'values': ['CNN_4']\n",
-    "        },\n",
-    "        'in_out_channel': {\n",
-    "            'min': 10,\n",
-    "            'max': 32,\n",
-    "        },\n",
-    "        'kernel_size': {\n",
-    "            'values': [5]\n",
-    "        },\n",
-    "        'padding': {\n",
-    "            'values': [3]\n",
-    "        },\n",
-    "        'pool_size': {\n",
-    "            'values': [2]\n",
-    "        },\n",
-    "        'fc_nodes1': {\n",
-    "            'min': 10,\n",
-    "            'max': 150,\n",
-    "        },\n",
-    "        'fc_nodes2': {\n",
-    "            'min': 10,\n",
-    "            'max': 100,\n",
-    "        }\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "# create a sweep\n",
-    "sweep_id = wandb.sweep(sweep_config, project=\"del-mc1\")\n",
-    "\n",
-    "# define the train function for wandb\n",
-    "def wandb_train():\n",
-    "    # initialize a new wandb run\n",
-    "    wandb.init()\n",
-    "\n",
-    "    # get the hyperparameters from wandb\n",
-    "    lr = wandb.config.lr\n",
-    "    batch_size = wandb.config.batch_size\n",
-    "    num_epochs = wandb.config.num_epochs\n",
-    "    models = wandb.config.model\n",
-    "    in_out_channel = wandb.config.in_out_channel\n",
-    "    kernel_size = wandb.config.kernel_size\n",
-    "    padding = wandb.config.padding\n",
-    "    pool_size = wandb.config.pool_size\n",
-    "    fc_nodes1 = wandb.config.fc_nodes1\n",
-    "    fc_nodes2 = wandb.config.fc_nodes2\n",
-    "\n",
-    "    if models == \"CNN_4\":\n",
-    "        model = CNN_4(in_out_channel=in_out_channel, kernel_size=kernel_size, pool_size=pool_size, padding=padding, fc_nodes1=fc_nodes1, fc_nodes2=fc_nodes2).to(device)\n",
-    "    \n",
-    "    # get dataloader\n",
-    "    trainloader, valloader = get_dataloader(batch_size=batch_size)\n",
-    "\n",
-    "    # create optimizer\n",
-    "    SGD_optimizer = optim.SGD(model.parameters(), lr = lr)\n",
-    "    # create criterion\n",
-    "    criterion_crossentropy = nn.CrossEntropyLoss()\n",
-    "\n",
-    "    for epoch in range(num_epochs):\n",
-    "        # train model\n",
-    "        train_loss, train_acc = train_modell(model, trainloader, criterion=criterion_crossentropy, optimizer=SGD_optimizer)\n",
-    "        # test model\n",
-    "        val_loss, val_acc = test_model(model, valloader, criterion=criterion_crossentropy)\n",
-    "\n",
-    "        # log metrics to wandb\n",
-    "        wandb.log({\"Train Loss\": train_loss, \"Train Accuracy\": train_acc, \"Validation Loss\": val_loss, \"Validation Accuracy\": val_acc, \"epoch\": epoch + 1})\n",
-    "\n",
-    "# run the sweep\n",
-    "wandb.agent(sweep_id, function=wandb_train, count = 25)\n",
-    "wandb.finish()"
    ]
   },
   {
@@ -1922,6 +1764,226 @@
     "# run the sweep\n",
     "wandb.agent(sweep_id, function=wandb_train, count = 25)\n",
     "wandb.finish()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Initialisierung mit unterschiedlichen Gewichtungen fuer CNN_5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CNN with 2 Convolutional Layers and 3 Fully Connected Layers\n",
+      "----------------------------------------------------------------\n",
+      "        Layer (type)               Output Shape         Param #\n",
+      "================================================================\n",
+      "            Conv2d-1           [-1, 32, 28, 28]           2,432\n",
+      "         MaxPool2d-2           [-1, 32, 14, 14]               0\n",
+      "            Conv2d-3           [-1, 32, 10, 10]          25,632\n",
+      "         MaxPool2d-4             [-1, 32, 5, 5]               0\n",
+      "            Linear-5                  [-1, 120]          96,120\n",
+      "            Linear-6                   [-1, 84]          10,164\n",
+      "            Linear-7                   [-1, 10]             850\n",
+      "================================================================\n",
+      "Total params: 135,198\n",
+      "Trainable params: 135,198\n",
+      "Non-trainable params: 0\n",
+      "----------------------------------------------------------------\n",
+      "Input size (MB): 0.01\n",
+      "Forward/backward pass size (MB): 0.27\n",
+      "Params size (MB): 0.52\n",
+      "Estimated Total Size (MB): 0.80\n",
+      "----------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Modifizierung der CNN_5 class\n",
+    "class CNN_5_weights(nn.Module):\n",
+    "    '''\n",
+    "    Convolutional Neural Network with 3 Convolutional Layers and 3 Fully Connected Layers\n",
+    "    '''\n",
+    "    def __init__(self, in_out_channel=32, kernel_size = 5, pool_size = 2, fc_nodes1 = 120, fc_nodes2 = 84, weights_init='default'):\n",
+    "        super().__init__()\n",
+    "        # define in_out_channel\n",
+    "        self.in_out_channel = in_out_channel\n",
+    "        # first convolutional layer\n",
+    "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=in_out_channel, kernel_size=kernel_size)\n",
+    "        # max pooling layer\n",
+    "        self.pool = nn.MaxPool2d(kernel_size=pool_size, stride=pool_size) # 2x2 max pooling\n",
+    "        # second convolutional layer\n",
+    "        self.conv2 = nn.Conv2d(in_channels=in_out_channel, out_channels=in_out_channel, kernel_size=kernel_size)\n",
+    "        # first fully connected layer\n",
+    "        self.fc1 = nn.Linear(in_features=in_out_channel*5*5, out_features=fc_nodes1)\n",
+    "        # second fully connected layer\n",
+    "        self.fc2 = nn.Linear(in_features=fc_nodes1, out_features=fc_nodes2)\n",
+    "        # third fully connected layer\n",
+    "        self.fc3 = nn.Linear(in_features=fc_nodes2, out_features=10)\n",
+    "        \n",
+    "        # initialize weights based on weights_init\n",
+    "        if weights_init == 'xavier':\n",
+    "            nn.init.xavier_uniform_(self.conv1.weight)\n",
+    "            nn.init.xavier_uniform_(self.conv2.weight)\n",
+    "            nn.init.xavier_uniform_(self.fc1.weight)\n",
+    "            nn.init.xavier_uniform_(self.fc2.weight)\n",
+    "            nn.init.xavier_uniform_(self.fc3.weight)\n",
+    "        elif weights_init == 'kaiming':\n",
+    "            nn.init.kaiming_uniform_(self.conv1.weight, mode='fan_in', nonlinearity='relu')\n",
+    "            nn.init.kaiming_uniform_(self.conv2.weight, mode='fan_in', nonlinearity='relu')\n",
+    "            nn.init.kaiming_uniform_(self.fc1.weight, mode='fan_in', nonlinearity='relu')\n",
+    "            nn.init.kaiming_uniform_(self.fc2.weight, mode='fan_in', nonlinearity='relu')\n",
+    "            nn.init.kaiming_uniform_(self.fc3.weight, mode='fan_in', nonlinearity='relu')\n",
+    "        else:\n",
+    "            # use PyTorch's default weight initialization\n",
+    "            pass\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        ## first convolutional layer\n",
+    "        x = self.conv1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        ## second convolutional layer\n",
+    "        x = self.conv2(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = self.pool(x)\n",
+    "        ## flatten\n",
+    "        x = x.view(-1, self.in_out_channel*5*5)\n",
+    "        ## first fully connected layer\n",
+    "        x = self.fc1(x)\n",
+    "        x = F.relu(x)\n",
+    "        ## second fully connected layer\n",
+    "        x = self.fc2(x)\n",
+    "        x = F.relu(x)\n",
+    "        ## third fully connected layer\n",
+    "        x = self.fc3(x)\n",
+    "        return x\n",
+    "    \n",
+    "# creating model objects and get the number of parameters\n",
+    "model_cnn_5_weights = CNN_5_weights(in_out_channel=32, kernel_size=5, pool_size=2, fc_nodes1=120, fc_nodes2=84, weights_init='kaiming').to(device)\n",
+    "\n",
+    "# print the model architecture\n",
+    "print(\"CNN with 2 Convolutional Layers and 3 Fully Connected Layers\")\n",
+    "summary(model_cnn_5_weights, (3, 32, 32))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Sweep mit unterschiedlichen Gewichtungen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define sweep configuration\n",
+    "# define sweep configuration\n",
+    "sweep_config = {\n",
+    "    'method': 'grid', \n",
+    "    'metric': {\n",
+    "        'name': 'Validation Accuracy',\n",
+    "        'goal': 'maximize'\n",
+    "    },\n",
+    "    'parameters': {\n",
+    "        'lr': {\n",
+    "            'values': [0.01707]\n",
+    "        },\n",
+    "        'batch_size': {\n",
+    "            'values': [64]\n",
+    "        },\n",
+    "        'num_epochs': {\n",
+    "            'values': [50]\n",
+    "        },\n",
+    "        'model': {\n",
+    "            'values': ['CNN_5_weights']\n",
+    "        },\n",
+    "        'in_out_channel': {\n",
+    "            'values': [43]\n",
+    "        },\n",
+    "        'kernel_size': {\n",
+    "            'values': [5]\n",
+    "        },\n",
+    "        'pool_size': {\n",
+    "            'values': [2]\n",
+    "        },\n",
+    "        'fc_nodes1': {\n",
+    "            'values': [95]\n",
+    "        },\n",
+    "        'fc_nodes2': {\n",
+    "            'values': [54]\n",
+    "        },\n",
+    "        'weights_init': {\n",
+    "            'values': ['default', 'xavier', 'kaiming']\n",
+    "        },\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# create a sweep\n",
+    "sweep_id = wandb.sweep(sweep_config, project=\"del-mc1\")\n",
+    "\n",
+    "# define the train function for wandb\n",
+    "def wandb_train():\n",
+    "    # initialize a new wandb run\n",
+    "    wandb.init()\n",
+    "\n",
+    "    # get the hyperparameters from wandb\n",
+    "    lr = wandb.config.lr\n",
+    "    batch_size = wandb.config.batch_size\n",
+    "    num_epochs = wandb.config.num_epochs\n",
+    "    models = wandb.config.model\n",
+    "    in_out_channel = wandb.config.in_out_channel\n",
+    "    kernel_size = wandb.config.kernel_size\n",
+    "    pool_size = wandb.config.pool_size\n",
+    "    fc_nodes1 = wandb.config.fc_nodes1\n",
+    "    fc_nodes2 = wandb.config.fc_nodes2\n",
+    "    weights_init = wandb.config.weights_init\n",
+    "    \n",
+    "\n",
+    "    if models == \"CNN_5_weights\":\n",
+    "        model = CNN_5_weights(in_out_channel=in_out_channel, kernel_size=kernel_size, pool_size=pool_size, fc_nodes1=fc_nodes1, fc_nodes2=fc_nodes2, weights_init=weights_init).to(device)\n",
+    "    \n",
+    "    # get dataloader\n",
+    "    trainloader, valloader = get_dataloader(batch_size=batch_size)\n",
+    "\n",
+    "    # create optimizer\n",
+    "    SGD_optimizer = optim.SGD(model.parameters(), lr = lr)\n",
+    "    # create criterion\n",
+    "    criterion_crossentropy = nn.CrossEntropyLoss()\n",
+    "\n",
+    "    for epoch in range(num_epochs):\n",
+    "        # train model\n",
+    "        train_loss, train_acc = train_modell(model, trainloader, criterion=criterion_crossentropy, optimizer=SGD_optimizer)\n",
+    "        # test model\n",
+    "        val_loss, val_acc = test_model(model, valloader, criterion=criterion_crossentropy)\n",
+    "\n",
+    "        # log metrics to wandb\n",
+    "        wandb.log({\"Train Loss\": train_loss, \"Train Accuracy\": train_acc, \"Validation Loss\": val_loss, \"Validation Accuracy\": val_acc, \"epoch\": epoch + 1})\n",
+    "\n",
+    "# run the sweep\n",
+    "wandb.agent(sweep_id, function=wandb_train)\n",
+    "wandb.finish()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Erkentniss der unterschiedlichn Gewichtungen"
    ]
   },
   {
